# rust_full_stack

./: Cargo.toml  Readme.md
backend/: Cargo.toml
backend/src/: api.rs  db.rs  main.rs
backend/src/api/: app_error.rs  app_state.rs  axum_app.rs  mod.rs  route_handlers.rs  router.rs
backend/src/api/route_handlers/: persons.rs
backend/src/db/: db_client.rs  db_config.rs  mod.rs
frontend/: Cargo.toml  index.html
frontend/src/: components.rs  main.rs  routes.rs
frontend/src/components/: app.rs  home_component.rs  persons.rs
frontend/src/components/persons/: person_component.rs  person_create_component.rs  person_details_component.rs  persons_component.rs
models/: Cargo.toml
models/src/: forms.rs  lib.rs  person.rs  thing.rs
models/src/forms/: edit_person_form.rs
models/src/utils/: mods.rs
