[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.16"
serde = { version = "1.0.160", features = ["derive"] }
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.27.0", features = ["full"] }
models = { path = "../models"}
