[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.16"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
models = { path = "../models"}
serde_json = "1.0.96"
axum-macros = "0.3.7"
futures = "0.3.28"
tower-http = { version = "0.4.0", features = ["fs"] }
surrealdb = "1.0.0-beta.9"
hyper = { version = "0.14.26", features = ["server"] }
