[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
models = { path = "../models"}
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
wasm-bindgen-futures = { version = "0.4.34", features = ["futures-core"] }
wasm-logger = "0.2.0"
log = "0.4.17"
yew-router = "0.17.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
