[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
models = { path = "../models"}
serde = { version = "1.0.160", features = ["derive"] }
wasm-bindgen-futures = { version = "0.4.34", features = ["futures-core"] }
wasm-logger = "0.2.0"
log = "0.4.17"
yew-router = "0.17.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
web-sys = { version = "0.3.61", features = ["Element", "HtmlButtonElement"] }
wasm-bindgen = "0.2.84"
gloo-net = "0.2.6"
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.96"

[package.metadata.scripts]
watch = "trunk serve"
