[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
#surrealdb = {version = "1.0.0-beta.9", default-features = false, features = ["kv-mem", "kv-indxdb", "http"]}
